--- a/docs/.vuepress/styles/style.less
+++ b/docs/.vuepress/styles/style.less
@@ -1,7 +1,21 @@
 #app {
   .navbar .site-name {
     font-size: 1.7rem;
+    color: #08b841;
   } 
+  .search-box {
+    width: 500px;
+    input {
+      width: 100%;
+      height: unset !important;
+      line-height: 2.375rem !important;
+      background-position: 0.5rem 0.6rem !important;;
+    }
+    .suggestions {
+      width: 100%;
+    }
+  }
+
   .demo-block .meta {
     background: none;
     border-radius: 0;
