--- a/docs/.vuepress/styles/style.less
+++ b/docs/.vuepress/styles/style.less
@@ -39,10 +39,10 @@
     color: #fff;
     text-align: center;
     &:nth-child(2n + 1) {
-      background-color: rgba(0, 146, 255, 0.75);
+      background-color: rgb(62, 175, 124, 0.75);
     }
     &:nth-child(2n) {
-      background-color: #0092ff;
+      background-color: #3eaf7c;
     }
   }
 }
