--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -3,7 +3,7 @@
  * @Date   : 2021-06-23 10:31
  * @WeChat : i-vshow
  * @Email  : vshow@dooomi.com
- * @Blog   : http://g.huxiaodo.com
+ * @Blog   : http://dooomi.com
  */
 
 $sm: 767;
