--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -3,7 +3,7 @@
  * @Date   : 2021-06-17 11:44
  * @WeChat : i-vshow
  * @Email  : vshow@dooomi.com
- * @Blog   : http://g.huxiaodo.com
+ * @Blog   : http://dooomi.com
  */
 
 .d-relative,
