--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,7 +3,7 @@
  * @Date   : 2021-06-17 11:31
  * @WeChat : i-vshow
  * @Email  : vshow@dooomi.com
- * @Blog   : http://g.huxiaodo.com
+ * @Blog   : http://dooomi.com
  */
 
 @import '~normalize.css';
