--- a/docs/.vuepress/styles/style.less
+++ b/docs/.vuepress/styles/style.less
@@ -4,14 +4,14 @@
   .navbar .site-name {
     font-size: 1.7rem;
     color: #08b841;
-  } 
+  }
   .search-box {
     width: 500px;
     input {
       width: 100%;
       height: unset !important;
       line-height: 2.375rem !important;
-      background-position: 0.5rem 0.6rem !important;;
+      background-position: 0.5rem 0.6rem !important;
     }
     .suggestions {
       width: 100%;
@@ -26,5 +26,9 @@
   }
   .sidebar-sub-headers {
     display: none;
+  }
+  .theme-antdocs-content > table {
+    width: 100%;
+    display: table;
   }
 }
