feat: 优化vuex, router

--- a/docs/.vuepress/styles/demo.less
+++ b/docs/.vuepress/styles/demo.less
@@ -1,4 +1,4 @@
-.demo-form\.html {
+.demo-form {
   .ant-form {
     width: 300px;
   }
@@ -7,5 +7,19 @@
   }
   .ant-btn + .ant-btn {
     margin-left: 10px;
+  }
+}
+
+.demo-layout {
+  .demo-content {
+    height: 450px;
+    overflow: hidden;
+    margin-bottom: 24px;
+    position: relative;
+  }
+  .logo {
+    height: 32px;
+    background: rgba(255, 255, 255, 0.2);
+    margin: 16px;
   }
 }
