--- a/docs/.vuepress/styles/style.less
+++ b/docs/.vuepress/styles/style.less
@@ -81,6 +81,32 @@
     height: 400px;
     border: 1px solid @borderColor;
   }
+
+  .theme-antdocs-content {
+    > h1,
+    > h2,
+    > h3,
+    > h4,
+    > h5,
+    > h6 {
+      margin-top: 0;
+      padding-top: 1.5rem;
+    }
+
+    h1 {
+      padding-top: 6.5rem;
+      padding-bottom: 1rem;
+      border-bottom: 1px solid @borderColor;
+    }
+
+    h1 + p {
+      margin-bottom: 1rem;
+    }
+
+    .demo-block + .demo-block {
+      margin-top: 30px;
+    }
+  }
 }
 
 .theme-container {
@@ -106,20 +132,5 @@
 
   &.quick-start ol {
     margin-top: 20px;
-  }
-}
-
-.theme-antdocs-content {
-  h1 {
-    padding-bottom: 1rem;
-    border-bottom: 1px solid @borderColor;
-  }
-
-  h1 + p {
-    margin-bottom: 1rem;
-  }
-
-  .demo-block + .demo-block {
-    margin-top: 30px;
   }
 }
