--- a/docs/.vuepress/styles/style.less
+++ b/docs/.vuepress/styles/style.less
@@ -107,6 +107,10 @@
       margin-top: 30px;
     }
   }
+
+  ::selection {
+    background: fadeout(@accentColor, 40%);
+  }
 }
 
 .theme-container {
