--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,5 +1,5 @@
 /*
- * @Author : jaydon
+ * @Author : vshow
  * @Date   : 2021-10-23 12:59
  * @WeChat : i-vshow
  * @Email  : vshow@dooomi.com
@@ -53,6 +53,6 @@ p {
 }
 
 /**
- * @author: jaydon
+ * @author: vshow
  * @description:
  */
