--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -1,10 +1,16 @@
-/*
+/**
  * @Author : vshow
  * @Date   : 2021-06-23 10:31
  * @WeChat : i-vshow
  * @Email  : vshow@dooomi.com
  * @Blog   : http://dooomi.com
  */
+
+.d-flex {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 
 $sm: 768;
 $md: 1200;
